--- a/src/components/DataTable/DataTable.css
+++ b/src/components/DataTable/DataTable.css
@@ -5,11 +5,14 @@ td {
 
 thead,
 tfoot {
-  background-color: #333;
-  color: #fff;
+  background-color: var(--test-var-color);
 }
 
 th,
 td {
   padding: 5px;
+}
+
+th {
+  cursor: pointer;
 }
